force-app/main/default/objects/Won_Opportunity_Checklist__c/Won_Opportunity_Checklist__c.object-meta.xml
<CustomObject>
    <label>Won Opportunity Checklist</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Won Opportunity Checklist Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Won Opportunity Checklists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>