force-app/main/default/objects/Won_Opportunity_Checklist__c/fields/Close_Date_Last_Signature_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Date_Last_Signature_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Confirm the close date matches the last signature date from the attached order.</description>
    <inlineHelpText>Confirm the close date matches the last signature date from the attached order.</inlineHelpText>
    <label>Close Date = Last Signature Date</label>
    <type>Checkbox</type>
</CustomField>