force-app/main/default/objects/Won_Opportunity_Checklist__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <inlineHelpText>Add notes here to explain why something is checked off that might be questionable.</inlineHelpText>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>