force-app/main/default/objects/Won_Opportunity_Checklist__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Won Opportunity Checklists</relationshipLabel>
    <relationshipName>Won_Opportunity_Checklists</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>