force-app/main/default/objects/Won_Opportunity_Checklist__c/fields/Opportunity_Amount_Signed_Order__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Amount_Signed_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Confirm the Opportunity Amount matches that on the signed order, of if it&apos;s a multi-year opp billed annually, make sure the annual amount matches.</description>
    <inlineHelpText>Confirm the Opportunity Amount matches that on the signed order, of if it&apos;s a multi-year opp billed annually, make sure the annual amount matches.</inlineHelpText>
    <label>Opportunity Amount = Signed Order</label>
    <type>Checkbox</type>
</CustomField>