force-app/main/default/objects/Won_Opportunity_Checklist__c/fields/Subs_Start_End_of_Months_Apart__c.field-meta.xml
<CustomField>
    <fullName>Subs_Start_End_of_Months_Apart__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Subscription Start Date and Subscription End Date are the # of Months for Subs Activation Apart, and if it&apos;s a renewal they follow the end date pattern from the last ending subscription period.</description>
    <inlineHelpText>Subscription Start Date and Subscription End Date are the # of Months for Subs Activation Apart, and if it&apos;s a renewal they follow the end date pattern from the last ending subscription period.</inlineHelpText>
    <label>Subs Start/End # of Months Apart</label>
    <type>Checkbox</type>
</CustomField>